feat(auth): Google Auth (live coding)
